--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webapp2-example-app",
   "version": "0.0.0",
-  "description": "",
+  "description": "Container(Docker) + HTTP/2 + ESModules based WebApplication develop environment.",
   "url": "https://github.com/uupaa/WebApp2",
   "keywords": [],
   "repository": {
