--- a/package.json
+++ b/package.json
@@ -1,26 +1,13 @@
 {
   "name": "webapp2-example-app",
   "version": "0.0.0",
-  "description": "Docker + HTTP/2 + ESModules based WebApplication develop environment.",
-  "url": "https://github.com/uupaa/WebApp2",
-  "keywords": [],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/uupaa/WebApp2.git"
-  },
+  "description": "",
   "scripts": {
     "create:server:certificate": "cd conf; openssl genrsa -out webapp2-server.key 2048 && openssl req -new -key webapp2-server.key -out webapp2-server.csr -subj \"/C=JP/ST=Tokyo/L=Tokyo/CN=localhost\" && openssl x509 -in webapp2-server.csr -days 3650 -req -signkey webapp2-server.key > webapp2-server.crt",
     "build:image": "docker build -t webapp2-nginx .",
     "remove:image": "docker rmi webapp2-nginx",
     "start": "docker run --name app -d -p 80:80 -p 443:443 -v $(pwd)/app:/usr/share/nginx/html/app:ro webapp2-nginx",
     "stop": "docker stop app; docker rm app"
-  },
-  "dependencies": {},
-  "devDependencies": {},
-  "lib": "./app/lib/",
-  "main": "./app/index.js",
-  "author": "uupaa",
-  "license": "MIT",
-  "contributors": []
+  }
 }
 
