--- a/package.json
+++ b/package.json
@@ -7,7 +7,21 @@
     "build:image": "docker build -t webapp2-nginx .",
     "remove:image": "docker rmi webapp2-nginx",
     "start": "docker run --name app -d -p 80:80 -p 443:443 -v $(pwd)/app:/usr/share/nginx/html/app:ro webapp2-nginx",
-    "stop": "docker stop app; docker rm app"
+    "stop": "docker stop app; docker rm app",
+    "bundle": "rollup -c",
+    "watch": "rollup -w -c &",
+    "unwatch": "killall -- node $(pwd)/node_modules/.bin/rollup -w -c; exit 0",
+    "eslint": "eslint app/lib --",
+    "zip": "zip -r WebApp2.zip . -x 'node_modules/*' '.git/*'"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "rollup": "^0.41.6",
+    "rollup-watch": "^3.2.2",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-license": "^0.4.0",
+    "rollup-plugin-node-resolve": "^3.0.0"
   }
 }
 
