--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "remove:image": "docker rmi webapp2-nginx",
     "start": "docker run --name app -d -p 80:80 -p 443:443 -v $(pwd)/app:/usr/share/nginx/html/app:ro webapp2-nginx",
     "stop": "docker stop app; docker rm app",
-    "bundle": "rollup -c",
-    "watch": "rollup -w -c &",
-    "unwatch": "killall -- node $(pwd)/node_modules/.bin/rollup -w -c; exit 0",
+    "bundle": "rollup -c .rollup.es5",
+    "watch": "rollup -w -c .rollup.es5 &",
+    "unwatch": "killall -- node $(pwd)/node_modules/.bin/rollup -w -c .rollup.es5; exit 0",
     "eslint": "eslint app/lib --",
     "zip": "zip -r WebApp2.zip . -x 'node_modules/*' '.git/*'"
   },
@@ -19,7 +19,9 @@
     "rollup": "^0.41.6",
     "rollup-watch": "^3.2.2",
     "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-cleanup": "^1.0.0",
     "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-license": "^0.4.0",
     "rollup-plugin-node-resolve": "^3.0.0"
   }
